Fix console overflow

--- a/style/index.css
+++ b/style/index.css
@@ -33,6 +33,7 @@ button:hover:not([disabled]) {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
+  flex: 1;
 }
 
 .full-page {
@@ -41,6 +42,7 @@ button:hover:not([disabled]) {
   bottom: 0;
   left: 0;
   right: 0;
+  display: flex;
 }
 
 /*====================================*/
@@ -52,6 +54,7 @@ button:hover:not([disabled]) {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  height: 30px; /* container must be given a size otherwise it will grow with its content */
 }
 
 /* top */
